# secure-t-test-task

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.test.yml
src/: .env  Dockerfile  entrypoint.sh  main.py  pyproject.toml  pytest.ini
src/api/: router.py  utils.py
src/api/services/: auth.py  post.py
src/api/v1/: auth.py  comment.py  post.py  thread.py
src/core/: config.py  db.py
src/migrations/: env.py
src/migrations/versions/: 0ca68d34dbcc_init.py  1e4d9d0a0bcb_init.py  65c331ff1e2e_init.py  667d2860794f_upvote_tables.py  6bc8c9adc076_comment_thread.py  7da02d49d18b_init.py  82e70a3f48ff_upvote_polarity.py  926e3b4fc20d_unique_username.py  a0d19dbb0ee0_commentthread.py  a29d9ffec8e0_soft_delete_posts_and_comments.py  b2f4f7de8453_commentthread.py  c6a6bca7ffa8_init.py  ecccc6c13c4b_init.py
src/models/: __init__.py  auth.py  base.py  post.py  user.py
src/serializers/: comment.py  post.py  session.py  user.py
src/tests/: conftest.py  test_auth.py  test_comment.py  test_post.py  utils.py
