[tool.poetry]
name = "test_task_secure_ti"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.2"
aiohttp = "^3.8.1"
uvicorn = "^0.18.2"
loguru = "^0.6.0"
psycopg2-binary = "2.9.1"
asyncpg = "^0.26.0"
greenlet = "^1.1.2"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
websockets = "^10.3"
orjson = "^3.7.11"
SQLAlchemy = "^1.4.42"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
